# deimos

./: .gitignore  Cargo.toml  LICENSE  build.bat  build.ps1  build.rs  build.sh  linker.ld  x86_64-unknown-deimos.json
.cargo/: config.toml
src/: boot.s  common.rs  main.rs  multiboot2.rs
src/arch/: x86.rs
src/arch/x86/: gdt.rs  pages.rs  ports.rs  serial.rs  vga.rs
