[package]
name = "deimos"
version = "0.1.0"
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bitfield-struct = "0.10.0"
bitflags = "2.6.0"
num-derive = "0.4.2"
num-traits = { version = "0.2.19", default-features = false }

[[bin]]
name = "deimos"
path = "src/main.rs"
test = false
doctest = false
bench = false
